.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Passport_Issue_Country__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_Country__c</fullName>
    <label>Passport Issue Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>