.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>Payroll_ID__c</fullName>
    <formula>tc9_pr__Primary_Payee_Record__r.tc9_pr__Payroll_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll ID</label>
    <type>Text</type>
</CustomField>