.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/physical_psychological_condition_that_ma__c.field-meta.xml
<CustomField>
    <fullName>physical_psychological_condition_that_ma__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you being treated for any physical/psychological condition that may impact on your ability to do your job effectively?</inlineHelpText>
    <label>physical/psychological condition that ma</label>
    <type>Checkbox</type>
</CustomField>