.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/PIN_Number_Generated__c.field-meta.xml
<CustomField>
    <fullName>PIN_Number_Generated__c</fullName>
    <label>PIN Number Generated</label>
    <type>DateTime</type>
</CustomField>