.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Preferred_contract_length__c.field-meta.xml
<CustomField>
    <fullName>Preferred_contract_length__c</fullName>
    <inlineHelpText>What is your preferred contract length?</inlineHelpText>
    <label>Preferred contract length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4 weeks</fullName>
            </value>
            <value>
                <fullName>6 weeks</fullName>
            </value>
            <value>
                <fullName>8 weeks</fullName>
            </value>
            <value>
                <fullName>12 weeks</fullName>
            </value>
            <value>
                <fullName>more than 12 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>