.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Preferred_Sector__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Sector__c</fullName>
    <label>Preferred Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aged Care</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>