.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Previously_worked_for_a_nursing_agency__c.field-meta.xml
<CustomField>
    <fullName>Previously_worked_for_a_nursing_agency__c</fullName>
    <inlineHelpText>Have you previously worked for an nursing agency?</inlineHelpText>
    <label>Previously worked for a nursing agency?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>