.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Profile_Text_for_App__c.field-meta.xml
<CustomField>
    <fullName>Profile_Text_for_App__c</fullName>
    <formula>&quot;To update your name, primary email address, or residential address, please contact your local branch for assistance.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Text for App</label>
    <type>Text</type>
</CustomField>