.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Psychiatry_Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Psychiatry_Mental_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Psychiatry / Mental Health</label>
    <type>Checkbox</type>
</CustomField>