.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Recent_Wok_Site__c.field-meta.xml
<CustomField>
    <fullName>Recent_Wok_Site__c</fullName>
    <label>Recent Wok Site</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>