.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Name__c</fullName>
    <label>Referral Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>