.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Referral_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Referral_Pathway__c</fullName>
    <label>Referral Pathway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AN Website</fullName>
            </value>
            <value>
                <fullName>Clan Na Gael</fullName>
            </value>
            <value>
                <fullName>Cork Seminar</fullName>
            </value>
            <value>
                <fullName>Dublin seminar</fullName>
            </value>
            <value>
                <fullName>DUL Expo</fullName>
            </value>
            <value>
                <fullName>E-Guide</fullName>
            </value>
            <value>
                <fullName>Email/EDM</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Galway Seminar</fullName>
            </value>
            <value>
                <fullName>Glasgow Event 2024</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Limerick Seminar</fullName>
            </value>
            <value>
                <fullName>Linkedln</fullName>
            </value>
            <value>
                <fullName>Liverpool Event 2023</fullName>
            </value>
            <value>
                <fullName>Manchester Event 2026</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Pre RDB</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Seminar - pre location definition</fullName>
            </value>
            <value>
                <fullName>University Lead</fullName>
            </value>
            <value>
                <fullName>Web Enquiry (old attribute)</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>