.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Referral_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Referral_Phone_Number__c</fullName>
    <label>Referral Phone Number</label>
    <type>Phone</type>
</CustomField>