.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Referral_type__c.field-meta.xml
<CustomField>
    <fullName>Referral_type__c</fullName>
    <label>Referral type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overseas referral</fullName>
            </value>
            <value>
                <fullName>Domestic referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>