.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Rehabilitation__c.field-meta.xml
<CustomField>
    <fullName>Rehabilitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rehabilitation</label>
    <type>Checkbox</type>
</CustomField>