.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Renal_Nephrology__c.field-meta.xml
<CustomField>
    <fullName>Renal_Nephrology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renal / Nephrology</label>
    <type>Checkbox</type>
</CustomField>