.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Resend_Link__c.field-meta.xml
<CustomField>
    <fullName>Resend_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to send an email to the candidate with a refreshed 3b my document URL</inlineHelpText>
    <label>Resend 3b Session Key</label>
    <type>Checkbox</type>
</CustomField>