.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Residential_Aged_Care__c.field-meta.xml
<CustomField>
    <fullName>Residential_Aged_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residential Aged Care</label>
    <type>Checkbox</type>
</CustomField>