.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Respiratory_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Respiratory_Medicine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respiratory Medicine</label>
    <type>Checkbox</type>
</CustomField>