.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Respite_Care__c.field-meta.xml
<CustomField>
    <fullName>Respite_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respite Care</label>
    <type>Checkbox</type>
</CustomField>