.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Review_Note__c.field-meta.xml
<CustomField>
    <fullName>Review_Note__c</fullName>
    <label>Review Note</label>
    <type>TextArea</type>
</CustomField>