.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Review_Reason__c</fullName>
    <label>Review Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AHPRA issue(s)</fullName>
            </value>
            <value>
                <fullName>Expired ticket(s)</fullName>
            </value>
            <value>
                <fullName>Internal investigation</fullName>
            </value>
            <value>
                <fullName>External investigation</fullName>
            </value>
            <value>
                <fullName>WH&amp;S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>