.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School</label>
    <type>Checkbox</type>
</CustomField>