.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By selecting this checkbox, an automation will be triggered to send the candidate an email with a link to access their document packs.</inlineHelpText>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>