.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Session_Key__c</fullName>
    <label>Session Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>