.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Shift_Approval_PIN_Number__c.field-meta.xml
<CustomField>
    <fullName>Shift_Approval_PIN_Number__c</fullName>
    <description>PIN Number to allow authorisation of Timesheets.</description>
    <label>Shift Approval PIN Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>