.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/sirenum__Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Alternate_Email__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>