.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/sirenum__Client_Password__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Client_Password__c</fullName>
    <label>Client Password</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>