.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential Aged Care</fullName>
            </value>
            <value>
                <fullName>Home and Community Care</fullName>
            </value>
            <value>
                <fullName>Respite Care</fullName>
            </value>
            <value>
                <fullName>Dementia-Specific Care</fullName>
            </value>
            <value>
                <fullName>Palliative Aged Care</fullName>
            </value>
            <value>
                <fullName>Medical / Surgical</fullName>
            </value>
            <value>
                <fullName>General Medical Only</fullName>
            </value>
            <value>
                <fullName>Emergency Department (Step Down)</fullName>
            </value>
            <value>
                <fullName>Surgical Ward</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Respiratory Medicine</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Renal / Nephrology</fullName>
            </value>
            <value>
                <fullName>Oncology / Haematology</fullName>
            </value>
            <value>
                <fullName>Oncology / Chemo</fullName>
            </value>
            <value>
                <fullName>Paediatrics</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Medical Short Stay Unit</fullName>
            </value>
            <value>
                <fullName>Colorectal</fullName>
            </value>
            <value>
                <fullName>Acute Assessment Unit</fullName>
            </value>
            <value>
                <fullName>Transitional Care</fullName>
            </value>
            <value>
                <fullName>Maternity / Obstetrics</fullName>
            </value>
            <value>
                <fullName>Gynaecology</fullName>
            </value>
            <value>
                <fullName>Orthopaedics</fullName>
            </value>
            <value>
                <fullName>Psychiatry / Mental Health</fullName>
            </value>
            <value>
                <fullName>Geriatrics / Aged Care</fullName>
            </value>
            <value>
                <fullName>Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Palliative Care</fullName>
            </value>
            <value>
                <fullName>Infectious Diseases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>