.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Skill_area__c.field-meta.xml
<CustomField>
    <fullName>Skill_area__c</fullName>
    <label>Skill area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aged care sector</fullName>
            </value>
            <value>
                <fullName>General medical/surgical</fullName>
            </value>
            <value>
                <fullName>Medical Departments</fullName>
            </value>
            <value>
                <fullName>Diagnostic &amp; Support Departments</fullName>
            </value>
            <value>
                <fullName>Specialised Care Units</fullName>
            </value>
            <value>
                <fullName>Community and Outpatient Services</fullName>
            </value>
            <value>
                <fullName>Offender Health / Prison Health</fullName>
            </value>
            <value>
                <fullName>Operating Theatres / Perioperative Services</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Critical Care Units</fullName>
            </value>
            <value>
                <fullName>Surgical Departments</fullName>
            </value>
            <value>
                <fullName>Immunisation / Vaccination</fullName>
            </value>
            <value>
                <fullName>Health Assessment</fullName>
            </value>
            <value>
                <fullName>General Practice / Primary Care</fullName>
            </value>
            <value>
                <fullName>Midwifery</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Food Services</fullName>
            </value>
            <value>
                <fullName>Environmental Services</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Wards</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>R&amp;R</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>