.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Skill_Summary__c.field-meta.xml
<CustomField>
    <fullName>Skill_Summary__c</fullName>
    <label>Skill Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>