.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Source_domain__c.field-meta.xml
<CustomField>
    <fullName>Source_domain__c</fullName>
    <label>Source domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>