.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Source_page__c.field-meta.xml
<CustomField>
    <fullName>Source_page__c</fullName>
    <label>Source page</label>
    <length>100</length>
    <type>Text</type>
</CustomField>