.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Special_travel_request_eg_are_you_trave__c.field-meta.xml
<CustomField>
    <fullName>Special_travel_request_eg_are_you_trave__c</fullName>
    <label>Special travel request eg: are you trave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>