.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <label>Speciality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aged Care</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Paediatrics</fullName>
            </value>
            <value>
                <fullName>Childcare</fullName>
            </value>
            <value>
                <fullName>Corporate Health</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Facility Manager</fullName>
            </value>
            <value>
                <fullName>Regional, Rural and Remote</fullName>
            </value>
            <value>
                <fullName>Midwifery Unit Manager</fullName>
            </value>
            <value>
                <fullName>Nurse Unit Manager</fullName>
            </value>
            <value>
                <fullName>Clinical Midwife</fullName>
            </value>
            <value>
                <fullName>Clinical Midwife Consultant</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Consultant</fullName>
            </value>
            <value>
                <fullName>Director of Nursing</fullName>
            </value>
            <value>
                <fullName>Director of Nursing - Midwifery</fullName>
            </value>
            <value>
                <fullName>Executive Director of Nursing</fullName>
            </value>
            <value>
                <fullName>Executive Director of Nursing / Midwifery</fullName>
            </value>
            <value>
                <fullName>Flight Nurse</fullName>
            </value>
            <value>
                <fullName>Remote Area Midwife (RAM)</fullName>
            </value>
            <value>
                <fullName>Remote Area Nurse (RAN)</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
                <isActive>false</isActive>
                <label>Mental Health</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>