.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Study_Break__c.field-meta.xml
<CustomField>
    <fullName>Study_Break__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Study Break?</label>
    <type>Checkbox</type>
</CustomField>