.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Study_Break_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Break_End_Date__c</fullName>
    <label>Study Break End Date</label>
    <type>Date</type>
</CustomField>