.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Study_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Status__c</fullName>
    <formula>IF(
   AND(CONTAINS(TEXT(Visa_Type__c),&apos;500&apos;),
   TODAY() &gt;=  Study_Break_Start_Date__c,
   TODAY() &lt;=  Study_Break_End_Date__c 
   ),
   &apos;Student - Study Break&apos;,
   IF(
      CONTAINS(TEXT(Visa_Type__c),&apos;500&apos;),
      &apos;Student (Limited Work Hours)&apos;,
      &apos;NA&apos;
   )
)</formula>
    <label>Study Status</label>
    <type>Text</type>
</CustomField>