.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Surgical_Ward__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Ward__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surgical Ward</label>
    <type>Checkbox</type>
</CustomField>