.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_bgl__Date_sent_to_GL__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Date_sent_to_GL__c</fullName>
    <label>Date sent to GL</label>
    <type>DateTime</type>
</CustomField>