.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_bgl__Sent_To_GL_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Sent_To_GL_Status__c</fullName>
    <label>Sent To GL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_bgl__Sent_to_GL_Status</valueSetName>
    </valueSet>
</CustomField>