.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_eau__Gender__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Gender__c</fullName>
    <description>The employee&apos;s identified gender, if provided.</description>
    <inlineHelpText>The employee&apos;s identified gender, if provided.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_eau__Gender</valueSetName>
    </valueSet>
</CustomField>