.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_eau__Other_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Other_Name__c</fullName>
    <description>Middle name(s)</description>
    <inlineHelpText>Middle name(s)</inlineHelpText>
    <label>Other Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>