.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_et__Exp_Claim_Approval_Notification_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Exp_Claim_Approval_Notification_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Employee has opted out of having email notification advising of their Expense Claims approval sent. If True, emails will not be sent</description>
    <label>Exp Claim Approval Notification Opt Out</label>
    <type>Checkbox</type>
</CustomField>