.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_et__Expense_Claim_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense_Claim_Link_Token__c</fullName>
    <description>The link token used to provide Expense Claim Approvers with access to the Expense Claim Approval pages within the Portal</description>
    <inlineHelpText>The link token used to provide Expense Claim Approvers with access to the Expense Claim Approval pages within the Portal</inlineHelpText>
    <label>Expense Claim Link Token</label>
    <type>TextArea</type>
</CustomField>