.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_et__Expense_Claim_Link_Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense_Claim_Link_Token_Expiry__c</fullName>
    <description>The expiry date for the current Expense Claim Link Token. After this date a new link token must be generated to allow access to the Expense Claim Approver Pages within the Portal</description>
    <inlineHelpText>The expiry date for the current Expense Claim Link Token</inlineHelpText>
    <label>Expense Claim Link Token Expiry</label>
    <type>DateTime</type>
</CustomField>