.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_et__Expense_Claim_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense_Claim_Notification_Email__c</fullName>
    <description>Defines which  Email Address the Employee/Approver  Expense Claim  Notifications will be sent to</description>
    <label>Expense Claim Notification Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Pay_Advice_Email_Address</valueSetName>
    </valueSet>
</CustomField>