.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_et__Link_Token_Expense_Claim_Submission__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Link_Token_Expense_Claim_Submission__c</fullName>
    <description>The date/time of the last Expense Claim submission that required a Link Token to be generated for the Contact.</description>
    <inlineHelpText>The date/time of the last Expense Claim submission that required a Link Token to be generated for the Contact</inlineHelpText>
    <label>Link Token Expense Claim Submission</label>
    <type>DateTime</type>
</CustomField>