.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_et__Merge_Invoice_Emails__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Merge_Invoice_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Invoices to be emailed to the Contact should be included in a single email (where invoice size permits). If unchecked each invoice will be sent as a separate email</description>
    <inlineHelpText>Indicates if Invoices to be emailed to the Contact should be included in a single email (where invoice size permits). If unchecked each invoice will be sent as a separate email</inlineHelpText>
    <label>Merge Invoice Emails</label>
    <type>Checkbox</type>
</CustomField>