.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_et__Timesheet_Approval_Request_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Approval_Request_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Contact has opted out of having email notifications advising a Timesheet is submitted. If True, emails will not be sent. This does not include reminder emails.</description>
    <label>Timesheet Approval Request Opt Out</label>
    <type>Checkbox</type>
</CustomField>