.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/tc9_et__Timesheet_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Link_Token__c</fullName>
    <description>The link token used to provide Timesheet Approvers with access to the Timesheet Approval pages within the Portal</description>
    <inlineHelpText>The link token used to provide Timesheet Approvers with access to the Timesheet Approval pages within the Portal</inlineHelpText>
    <label>Timesheet Link Token</label>
    <type>TextArea</type>
</CustomField>